src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


html {
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll;
    overflow-x: hidden;
    font-family:  'Poppins', sans-serif;
    user-select: none
;
}

html::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
}

